--- a/informatica/01_windows/04/index.html
+++ b/informatica/01_windows/04/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronograma - Painel de Controle e Contas de Usuário</title>
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../../style.css">
 </head>
 <body class="body">
     <header class="header">
