--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronograma de Aulas - Administração, Empreendedorismo e RH</title>
-    <link rel="stylesheet" href="../inext/style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" href="./img/inextlogo.png">
 </head>
-<body class="body">
+<body>
     <header class="header">
         <div class="header-content">
             <h1 class="title">Cronograma de Aulas: Professor Lucas</h1>
@@ -91,7 +92,7 @@
     </section>
 
     <footer class="footer">
-        <p>© 2024 Cronograma de Aulas - Administração, Empreendedorismo e RH</p>
+        <p>&copy; 2024 Cronograma de Aulas - Prof. Lucas Morais</p>
     </footer>
 
 </body>
