melhorando responsividade mobile

--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
     </section>
 
     <section class="section">
+        <h2 class="time-slot">0 - Integração de Informática</h2>
+        <p>Este módulo contém 7 aulas que cobrem conceitos e práticas essenciais de informática, incluindo introdução ao computador, sistemas operacionais e ferramentas básicas.</p>
+        <ul class="list">
+            <li><a href="informatica/00_integracao/01/index.html" class="link">Aula 1: Introdução ao Computador</a></li>
+            <li><a href="informatica/00_integracao/02/index.html" class="link">Aula 2: Tipos de Software e Hardware</a></li>
+            <li><a href="informatica/00_integracao/03/index.html" class="link">Aula 3: Sistema Operacional e Arquivos</a></li>
+            <li><a href="informatica/00_integracao/04/index.html" class="link">Aula 4: Programas de Escritório e Utilitários</a></li>
+            <li><a href="informatica/00_integracao/05/index.html" class="link">Aula 5: Internet e Ferramentas de Navegação</a></li>
+            <li><a href="informatica/00_integracao/06/index.html" class="link">Aula 6: Segurança e Manutenção do Computador</a></li>
+            <li><a href="informatica/00_integracao/07/index.html" class="link">Aula 7: Revisão e Exercício Prático</a></li>
+        </ul>
+    </section>
+    
+
+    <section class="section">
         <h2 class="time-slot">I - Windows</h2>
         <p>Este módulo contém 6 aulas sobre conceitos e práticas essenciais do computador e uso do Sistema Operacional Windows.</p>
         <ul class="list">
@@ -78,6 +93,29 @@
             <li><a href="informatica/01_windows/06/index.html" class="link">Aula 6: Revisão e Prova Prática</a></li>
         </ul>
     </section>
+
+    <section class="section">
+        <h2 class="time-slot">II - Internet</h2>
+        <p>Este módulo contém 3 aulas sobre o uso da internet, incluindo navegação, pesquisa e segurança online.</p>
+        <ul class="list">
+            <li><a href="informatica/02_internet/01/index.html" class="link">Aula 1: Introdução à Internet e Navegadores</a></li>
+            <li><a href="informatica/02_internet/02/index.html" class="link">Aula 2: Pesquisa Avançada e Ferramentas Online</a></li>
+            <li><a href="informatica/02_internet/03/index.html" class="link">Aula 3: Segurança Online e Privacidade</a></li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2 class="time-slot">III - PowerPoint</h2>
+        <p>Este módulo contém 7 aulas sobre como utilizar o PowerPoint, desde a criação de slides até técnicas avançadas de apresentação e desenvolvimento de projeto</p>
+        <ul class="list">
+            <li><a href="informatica/03_ppt/01/index.html" class="link">Aula 1: Introdução ao PowerPoint</a></li>
+            <li><a href="informatica/03_ppt/02/index.html" class="link">Aula 2: Criando e Organizando Slides</a></li>
+            <li><a href="informatica/03_ppt/03/index.html" class="link">Aula 3: Inserção de Texto, Imagens e Formas</a></li>
+            <li><a href="informatica/03_ppt/04/index.html" class="link">Aula 4: Animações e Transições de Slides</a></li>
+            <li><a href="informatica/03_ppt/05/index.html" class="link">Aula 5: Layouts e Design de Slides</a></li>
+        </ul>
+    </section>
+    
 
     <section class="section">
         <h2 class="time-slot">IV - Edição de Vídeo</h2>
