--- a/adm_empreendedorismo/01_adm/03/index.html
+++ b/adm_empreendedorismo/01_adm/03/index.html
@@ -9,7 +9,7 @@
 <body class="body">
     <header class="header">
         <div class="header-content">
-            <h1 class="title">Cronograma: Cultura Organizacional, Visão, Missão e Valores</h1>
+            <h1 class="title">Cronograma: Cultura Organizacional, Missão, Visão e Valores</h1>
             <p class="subtitle">Compreenda os conceitos fundamentais da cultura organizacional e como Visão, Missão e Valores moldam a identidade de uma empresa.</p>
         </div>
     </header>
@@ -32,25 +32,9 @@
         </ul>
     </section>
 
+    
     <section class="section">
-        <h2 class="time-slot">0:20 - 0:40 | Visão</h2>
-        <ul class="list">
-            <li><strong>Definição de Visão:</strong>
-                <ul>
-                    <li>A Visão é a declaração que descreve o que a organização aspira ser no futuro. Ela define a direção a ser seguida e inspira os colaboradores a se alinharem com os objetivos da empresa.</li>
-                    <li><strong>Exemplo de Visão:</strong> "Ser a empresa líder em inovação tecnológica, transformando vidas e negócios com soluções avançadas." Essa visão indica o futuro desejado e a aspiração da organização.</li>
-                </ul>
-            </li>
-            <li><strong>Importância da Visão:</strong>
-                <ul>
-                    <li>A Visão proporciona clareza sobre os objetivos de longo prazo da organização e motiva os colaboradores a trabalharem em direção a um propósito comum.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section class="section">
-        <h2 class="time-slot">0:40 - 1:00 | Missão</h2>
+        <h2 class="time-slot">0:20 - 0:40 | Missão</h2>
         <ul class="list">
             <li><strong>Definição de Missão:</strong>
                 <ul>
@@ -65,7 +49,23 @@
             </li>
         </ul>
     </section>
-
+    
+    <section class="section">
+        <h2 class="time-slot">0:40 - 1:00 | Visão</h2>
+        <ul class="list">
+            <li><strong>Definição de Visão:</strong>
+                <ul>
+                    <li>A Visão é a declaração que descreve o que a organização aspira ser no futuro. Ela define a direção a ser seguida e inspira os colaboradores a se alinharem com os objetivos da empresa.</li>
+                    <li><strong>Exemplo de Visão:</strong> "Ser a empresa líder em inovação tecnológica, transformando vidas e negócios com soluções avançadas." Essa visão indica o futuro desejado e a aspiração da organização.</li>
+                </ul>
+            </li>
+            <li><strong>Importância da Visão:</strong>
+                <ul>
+                    <li>A Visão proporciona clareza sobre os objetivos de longo prazo da organização e motiva os colaboradores a trabalharem em direção a um propósito comum.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
     <section class="section">
         <h2 class="time-slot">1:00 - 1:20 | Valores</h2>
         <ul class="list">
