--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cronograma de Aulas - Administração, Empreendedorismo e RH</title>
+    <title>Cronograma de Aulas - Prof Lucas</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/png" href="./img/inextlogo.png">
 </head>
@@ -19,16 +19,16 @@
         <h2 class="time-slot">I - Administração</h2>
         <p>Este módulo contém 10 aulas sobre conceitos e práticas essenciais da administração de empresas.</p>
         <ul class="list">
-            <li><a href="adm_empreendedorismo/01_adm/01/index.html" class="link">Aula 1: Introdução à Administração</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/02/index.html" class="link">Aula 2: Teoria Geral da Administração e Perfil do Administrador</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/03/index.html" class="link">Aula 3: Cultura Organizacional, Visão, Missão e Valores</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/04/index.html" class="link">Aula 4: Ambiente Organizacional, Clima Organizacional e Pesquisa</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/05/index.html" class="link">Aula 5: Análise da Pesquisa e Tributos</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/06/index.html" class="link">Aula 6: Noções de Contabilidade</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/07/index.html" class="link">Aula 7: Exercícios de Contabilidade</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/08/index.html" class="link">Aula 8: Documentos Bancários</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/09/index.html" class="link">Aula 9: Cheques e Preenchimento de Documentos</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/10/index.html" class="link">Aula 10: Revisão de Módulo</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução à Administração</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Teoria Geral da Administração e Perfil do Administrador</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Cultura Organizacional, Missão, Visão e Valores</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Ambiente Organizacional, Clima Organizacional e Pesquisa</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Análise da Pesquisa e Tributos</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Noções de Contabilidade</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/07/index.html" class="link"><strong class="subtitle aula">Aula 7: </strong>Exercícios de Contabilidade</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/08/index.html" class="link"><strong class="subtitle aula">Aula 8: </strong>Documentos Bancários</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/09/index.html" class="link"><strong class="subtitle aula">Aula 9: </strong>Cheques e Preenchimento de Documentos</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/10/index.html" class="link"><strong class="subtitle aula">Aula 10:</strong> Revisão de Módulo</a></li>
         </ul>
     </section>
 
@@ -36,16 +36,16 @@
         <h2 class="time-slot">II - Empreendedorismo</h2>
         <p>Este módulo contém 10 aulas sobre o mundo do empreendedorismo e como planejar e administrar um negócio próprio.</p>
         <ul class="list">
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/01/index.html" class="link">Aula 1: O que é Empreendedorismo?</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/02/index.html" class="link">Aula 2: Características de um Empreendedor</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/03/index.html" class="link">Aula 3: Empreendedorismo e Networking</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/04/index.html" class="link">Aula 4: Fracasso, Modelo de Negócios e Stakeholders</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/05/index.html" class="link">Aula 5: Lojas Virtuais, Startups e Abertura de Empresas</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/06/index.html" class="link">Aula 6: Marca, Franquias e Patente</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/07/index.html" class="link">Aula 7: Planejamento Estratégico e Cenário Econômico</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/08/index.html" class="link">Aula 8: Matriz SWOT, Matriz BCG e Estudo de Caso</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/09/index.html" class="link">Aula 9: Produção e Qualidade</a></li>
-            <li><a href="adm_empreendedorismo/02_empreendedorismo/10/index.html" class="link">Aula 10: Revisão de Módulo</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>O que é Empreendedorismo?</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Características de um Empreendedor</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Empreendedorismo e Networking</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Fracasso, Modelo de Negócios e Stakeholders</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Lojas Virtuais, Startups e Abertura de Empresas</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Marca, Franquias e Patente</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/07/index.html" class="link"><strong class="subtitle aula">Aula 7: </strong>Planejamento Estratégico e Cenário Econômico</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/08/index.html" class="link"><strong class="subtitle aula">Aula 8: </strong>Matriz SWOT, Matriz BCG e Estudo de Caso</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/09/index.html" class="link"><strong class="subtitle aula">Aula 9: </strong>Produção e Qualidade</a></li>
+            <li><a href="adm_empreendedorismo/02_empreendedorismo/10/index.html" class="link"><strong class="subtitle aula">Aula 10:</strong> Revisão de Módulo</a></li>
         </ul>
     </section>
 
@@ -53,16 +53,16 @@
         <h2 class="time-slot">III - RH e Leis Trabalhistas</h2>
         <p>Este módulo contém 10 aulas sobre gestão de recursos humanos e as leis trabalhistas que regem as relações de trabalho no Brasil.</p>
         <ul class="list">
-            <li><a href="adm_empreendedorismo/03_rh/01/index.html" class="link">Aula 1: Introdução ao RH e Gestão de Pessoas</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/02/index.html" class="link">Aula 2: Empregado, Empregador e Contratos de Trabalho</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/03/index.html" class="link">Aula 3: Documentos do RH</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/04/index.html" class="link">Aula 4: Folha de Registro e Benefícios</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/05/index.html" class="link">Aula 5: Salários e Benefícios</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/06/index.html" class="link">Aula 6: Novas Leis Trabalhistas e Segurança no Trabalho</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/07/index.html" class="link">Aula 7: Processo Seletivo</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/08/index.html" class="link">Aula 8: Processo Seletivo e Treinamento de Adaptação</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/09/index.html" class="link">Aula 9: Cuidando das Pessoas e Melhorando o Ambiente</a></li>
-            <li><a href="adm_empreendedorismo/03_rh/10/index.html" class="link">Aula 10: Revisão de Módulo</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao RH e Gestão de Pessoas</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Empregado, Empregador e Contratos de Trabalho</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Documentos do RH</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Folha de Registro e Benefícios</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Salários e Benefícios</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Novas Leis Trabalhistas e Segurança no Trabalho</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/07/index.html" class="link"><strong class="subtitle aula">Aula 7: </strong>Processo Seletivo</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/08/index.html" class="link"><strong class="subtitle aula">Aula 8: </strong>Processo Seletivo e Treinamento de Adaptação</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/09/index.html" class="link"><strong class="subtitle aula">Aula 9: </strong>Cuidando das Pessoas e Melhorando o Ambiente</a></li>
+            <li><a href="adm_empreendedorismo/03_rh/10/index.html" class="link"><strong class="subtitle aula">Aula 10:</strong> Revisão de Módulo</a></li>
         </ul>
     </section>
 
@@ -70,13 +70,13 @@
         <h2 class="time-slot">0 - Integração de Informática</h2>
         <p>Este módulo contém 7 aulas que cobrem conceitos e práticas essenciais de informática, incluindo introdução ao computador, sistemas operacionais e ferramentas básicas.</p>
         <ul class="list">
-            <li><a href="informatica/00_integracao/01/index.html" class="link">Aula 1: Introdução ao Computador</a></li>
-            <li><a href="informatica/00_integracao/02/index.html" class="link">Aula 2: Tipos de Software e Hardware</a></li>
-            <li><a href="informatica/00_integracao/03/index.html" class="link">Aula 3: Sistema Operacional e Arquivos</a></li>
-            <li><a href="informatica/00_integracao/04/index.html" class="link">Aula 4: Programas de Escritório e Utilitários</a></li>
-            <li><a href="informatica/00_integracao/05/index.html" class="link">Aula 5: Internet e Ferramentas de Navegação</a></li>
-            <li><a href="informatica/00_integracao/06/index.html" class="link">Aula 6: Segurança e Manutenção do Computador</a></li>
-            <li><a href="informatica/00_integracao/07/index.html" class="link">Aula 7: Revisão e Exercício Prático</a></li>
+            <li><a href="informatica/00_integracao/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao Computador</a></li>
+            <li><a href="informatica/00_integracao/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Tipos de Software e Hardware</a></li>
+            <li><a href="informatica/00_integracao/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Sistema Operacional e Arquivos</a></li>
+            <li><a href="informatica/00_integracao/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Programas de Escritório e Utilitários</a></li>
+            <li><a href="informatica/00_integracao/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Internet e Ferramentas de Navegação</a></li>
+            <li><a href="informatica/00_integracao/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Segurança e Manutenção do Computador</a></li>
+            <li><a href="informatica/00_integracao/07/index.html" class="link"><strong class="subtitle aula">Aula 7: </strong>Revisão e Exercício Prático</a></li>
         </ul>
     </section>
     
@@ -85,12 +85,12 @@
         <h2 class="time-slot">I - Windows</h2>
         <p>Este módulo contém 6 aulas sobre conceitos e práticas essenciais do computador e uso do Sistema Operacional Windows.</p>
         <ul class="list">
-            <li><a href="informatica/01_windows/01/index.html" class="link">Aula 1: Introdução ao Windows</a></li>
-            <li><a href="informatica/01_windows/02/index.html" class="link">Aula 2: Ferramentas Básicas do Windows</a></li>
-            <li><a href="informatica/01_windows/03/index.html" class="link">Aula 3: Windows Explorer e Recursos Avançados</a></li>
-            <li><a href="informatica/01_windows/04/index.html" class="link">Aula 4: Painel de Controle e Contas de Usuário</a></li>
-            <li><a href="informatica/01_windows/05/index.html" class="link">Aula 5: Proteção e Manutenção do Sistema</a></li>
-            <li><a href="informatica/01_windows/06/index.html" class="link">Aula 6: Revisão e Prova Prática</a></li>
+            <li><a href="informatica/01_windows/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao Windows</a></li>
+            <li><a href="informatica/01_windows/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Ferramentas Básicas do Windows</a></li>
+            <li><a href="informatica/01_windows/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Windows Explorer e Recursos Avançados</a></li>
+            <li><a href="informatica/01_windows/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Painel de Controle e Contas de Usuário</a></li>
+            <li><a href="informatica/01_windows/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Proteção e Manutenção do Sistema</a></li>
+            <li><a href="informatica/01_windows/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Revisão e Prova Prática</a></li>
         </ul>
     </section>
 
@@ -98,9 +98,9 @@
         <h2 class="time-slot">II - Internet</h2>
         <p>Este módulo contém 3 aulas sobre o uso da internet, incluindo navegação, pesquisa e segurança online.</p>
         <ul class="list">
-            <li><a href="informatica/02_internet/01/index.html" class="link">Aula 1: Introdução à Internet e Navegadores</a></li>
-            <li><a href="informatica/02_internet/02/index.html" class="link">Aula 2: Pesquisa Avançada e Ferramentas Online</a></li>
-            <li><a href="informatica/02_internet/03/index.html" class="link">Aula 3: Segurança Online e Privacidade</a></li>
+            <li><a href="informatica/02_internet/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução à Internet e Navegadores</a></li>
+            <li><a href="informatica/02_internet/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Pesquisa Avançada e Ferramentas Online</a></li>
+            <li><a href="informatica/02_internet/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Segurança Online e Privacidade</a></li>
         </ul>
     </section>
 
@@ -108,11 +108,11 @@
         <h2 class="time-slot">III - PowerPoint</h2>
         <p>Este módulo contém 7 aulas sobre como utilizar o PowerPoint, desde a criação de slides até técnicas avançadas de apresentação e desenvolvimento de projeto</p>
         <ul class="list">
-            <li><a href="informatica/03_ppt/01/index.html" class="link">Aula 1: Introdução ao PowerPoint</a></li>
-            <li><a href="informatica/03_ppt/02/index.html" class="link">Aula 2: Criando e Organizando Slides</a></li>
-            <li><a href="informatica/03_ppt/03/index.html" class="link">Aula 3: Inserção de Texto, Imagens e Formas</a></li>
-            <li><a href="informatica/03_ppt/04/index.html" class="link">Aula 4: Animações e Transições de Slides</a></li>
-            <li><a href="informatica/03_ppt/05/index.html" class="link">Aula 5: Layouts e Design de Slides</a></li>
+            <li><a href="informatica/03_ppt/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao PowerPoint</a></li>
+            <li><a href="informatica/03_ppt/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Criando e Organizando Slides</a></li>
+            <li><a href="informatica/03_ppt/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Inserção de Texto, Imagens e Formas</a></li>
+            <li><a href="informatica/03_ppt/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Animações e Transições de Slides</a></li>
+            <li><a href="informatica/03_ppt/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Layouts e Design de Slides</a></li>
         </ul>
     </section>
     
@@ -121,11 +121,11 @@
         <h2 class="time-slot">IV - Edição de Vídeo</h2>
         <p>Este módulo contém 5 aulas sobre conceitos e prática de edição de vídeo com Filmora Wondershare.</p>
         <ul class="list">
-            <li><a href="informatica/04_edicao/1/index.html" class="link">Aula 1: Criação e Roteiro de Vídeos</a></li>
-            <li><a href="informatica/04_edicao/2/index.html" class="link">Aula 2: Edição de Vídeos e Áudio</a></li>
-            <li><a href="informatica/04_edicao/3/index.html" class="link">Aula 3: Manipulação de Vídeo e Efeitos</a></li>
-            <li><a href="informatica/04_edicao/4/index.html" class="link">Aula 4: Legendas e Início do Projeto</a></li>
-            <li><a href="informatica/04_edicao/5/index.html" class="link">Aula 5: Conclusão e Feedback</a></li>
+            <li><a href="informatica/04_edicao/1/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Criação e Roteiro de Vídeos</a></li>
+            <li><a href="informatica/04_edicao/2/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Edição de Vídeos e Áudio</a></li>
+            <li><a href="informatica/04_edicao/3/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Manipulação de Vídeo e Efeitos</a></li>
+            <li><a href="informatica/04_edicao/4/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Legendas e Início do Projeto</a></li>
+            <li><a href="informatica/04_edicao/5/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Conclusão e Feedback</a></li>
         </ul>
     </section>
 
