--- a/adm_empreendedorismo/02_empreendedorismo/10/index.html
+++ b/adm_empreendedorismo/02_empreendedorismo/10/index.html
@@ -3,126 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cronograma - Empreendedorismo e Gestão de Negócios</title>
+    <title>Cronograma - Empreendedorismo e Planejamento</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
 <body class="body">
     <header class="header">
         <div class="header-content">
-            <h1 class="title">Cronograma: Empreendedorismo e Gestão de Negócios</h1>
-            <p class="subtitle">Aprenda os conceitos de empreendedorismo, como criar uma empresa, estratégias de sucesso e ferramentas de gestão de qualidade.</p>
+            <h1 class="title">Cronograma: Empreendedorismo e Planejamento</h1>
+            <p class="subtitle">Aprofunde seus conhecimentos sobre empreendedorismo e como criar um planejamento estratégico para o sucesso.</p>
         </div>
     </header>
 
-    <!-- 0:00 - 0:20 | Empreender -->
     <section class="section">
-        <h2 class="time-slot">0:00 - 0:20 | O que é Empreender</h2>
+        <h2 class="time-slot">0:00 - 0:15 | O que é Empreender</h2>
         <ul class="list">
             <li><strong>Ser Empreendedor:</strong>
                 <ul>
-                    <li>O empreendedor é aquele que identifica oportunidades de negócio, assume riscos e busca inovação para criar valor e gerar impacto no mercado.</li>
-                    <li>Além de ter uma visão criativa e inovadora, o empreendedor é resiliente, disposto a aprender com os erros e persistente na busca por resultados.</li>
+                    <li>Empreender é identificar oportunidades, tomar riscos calculados e criar algo inovador que gere valor.</li>
+                    <li>O empreendedor é alguém que busca resolver problemas e criar soluções que atendem a uma necessidade no mercado.</li>
                 </ul>
             </li>
             <li><strong>Não ser Empreendedor:</strong>
                 <ul>
-                    <li>Alguém que prefere estabilidade e busca seguir normas e processos sem se arriscar ou criar soluções inovadoras para problemas.</li>
-                    <li>A principal diferença é a aversão ao risco e a preferência por seguir caminhos já estabelecidos, sem buscar melhorias ou inovações.</li>
+                    <li>Quando uma pessoa busca estabilidade, evita riscos e prefere a segurança de um emprego tradicional, não se considera um empreendedor.</li>
+                    <li>Focar apenas em um trabalho sem buscar inovar ou melhorar constantemente é o oposto de ser empreendedor.</li>
                 </ul>
             </li>
         </ul>
     </section>
 
-    <!-- 0:20 - 0:40 | Empreendedores de Sucesso e Desenvolvimento das Características Empreendedoras -->
     <section class="section">
-        <h2 class="time-slot">0:20 - 0:40 | Empreendedores de Sucesso</h2>
+        <h2 class="time-slot">0:15 - 0:30 | Empreendedores de Sucesso</h2>
         <ul class="list">
             <li><strong>Exemplos de Empreendedores de Sucesso:</strong>
                 <ul>
-                    <li>Empreendedores como Steve Jobs, Elon Musk e Jeff Bezos são exemplos de pessoas que mudaram indústrias através da inovação, visão e persistência.</li>
-                    <li>Esses empreendedores compartilham características como determinação, liderança e a capacidade de tomar decisões arriscadas com confiança.</li>
-                </ul>
-            </li>
-            <li><strong>Como Desenvolver as suas Características Empreendedoras:</strong>
-                <ul>
-                    <li>Desenvolver características empreendedoras envolve adquirir conhecimento, se arriscar em novos projetos, e aprender com os erros para se tornar mais eficiente em futuras empreitadas.</li>
-                    <li>Participar de workshops, fazer cursos de empreendedorismo e se expor a novos desafios são algumas maneiras de cultivar essas características.</li>
+                    <li>Steve Jobs, Elon Musk e Oprah Winfrey são exemplos de empreendedores que criaram empresas inovadoras que transformaram mercados.</li>
+                    <li>Esses empreendedores compartilharam características como visão, persistência, e a capacidade de aprender com os fracassos.</li>
                 </ul>
             </li>
         </ul>
     </section>
 
-    <!-- 0:40 - 1:00 | Perfil de um Empreendedor e Estudos de Casos -->
     <section class="section">
-        <h2 class="time-slot">0:40 - 1:00 | Perfil de um Empreendedor</h2>
+        <h2 class="time-slot">0:30 - 0:45 | Como Desenvolver as Suas Características Empreendedoras</h2>
         <ul class="list">
-            <li><strong>Perfil de um Empreendedor:</strong>
+            <li><strong>Autoconhecimento e Educação Contínua:</strong>
                 <ul>
-                    <li>O empreendedor típico é proativo, criativo e focado em resultados. Ele assume riscos calculados e tem visão de longo prazo.</li>
-                    <li>Ele também deve ser um bom comunicador, ter habilidades de liderança e ser capaz de gerenciar sua equipe de forma eficiente.</li>
-                </ul>
-            </li>
-            <li><strong>Estudos de Casos:</strong>
-                <ul>
-                    <li>Estudos de casos de empresas como a Apple, Amazon e Google ajudam a entender o caminho de sucesso de grandes empreendedores, suas estratégias e como superaram desafios ao longo do tempo.</li>
-                    <li>Esses estudos oferecem insights valiosos sobre como aplicar teoria à prática no empreendedorismo.</li>
+                    <li>Identifique suas forças e fraquezas. Invista em cursos, workshops e leituras sobre inovação e liderança.</li>
+                    <li>Fazer parte de uma rede de mentores e colegas empreendedores também ajuda no crescimento pessoal e profissional.</li>
                 </ul>
             </li>
         </ul>
     </section>
 
-    <!-- 1:00 - 1:20 | Importância do Empreendedorismo e Tendências -->
     <section class="section">
-        <h2 class="time-slot">1:00 - 1:20 | Importância do Empreendedorismo</h2>
+        <h2 class="time-slot">0:45 - 1:00 | Perfil de um Empreendedor</h2>
+        <ul class="list">
+            <li><strong>Características do Perfil Empreendedor:</strong>
+                <ul>
+                    <li>Proatividade: busca constante por novas oportunidades e soluções.</li>
+                    <li>Resiliência: habilidade para lidar com fracassos e obstáculos.</li>
+                    <li>Capacidade de liderança e comunicação clara com a equipe.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2 class="time-slot">1:00 - 1:15 | Importância do Empreendedorismo e Tendências</h2>
         <ul class="list">
             <li><strong>Importância do Empreendedorismo:</strong>
                 <ul>
-                    <li>O empreendedorismo é essencial para o crescimento econômico, pois gera inovação, cria empregos e contribui para a competitividade no mercado.</li>
-                    <li>Empreendedores bem-sucedidos também desempenham um papel crucial na resolução de problemas sociais e econômicos, criando soluções práticas e eficientes.</li>
+                    <li>O empreendedorismo é essencial para a criação de empregos, inovação e crescimento econômico de um país.</li>
+                    <li>Empreendedores ajudam a desenvolver novas soluções para problemas antigos, criando impacto social e econômico.</li>
                 </ul>
             </li>
             <li><strong>Tendências do Empreendedorismo:</strong>
                 <ul>
-                    <li>O empreendedorismo tem se adaptado às novas tecnologias e mudanças no comportamento do consumidor, com destaque para áreas como e-commerce, inteligência artificial e sustentabilidade.</li>
-                    <li>Essas tendências criam novas oportunidades para os empreendedores, especialmente nas áreas de digitalização e inovação social.</li>
+                    <li>O crescimento de negócios digitais e startups de tecnologia, como fintechs e e-commerces, está em alta.</li>
+                    <li>Há também uma forte tendência de empreendedorismo social, focado em causas sustentáveis e sociais.</li>
                 </ul>
             </li>
         </ul>
     </section>
 
-    <!-- 1:20 - 1:40 | Networking e Como Abrir uma Empresa -->
     <section class="section">
-        <h2 class="time-slot">1:20 - 1:40 | Networking</h2>
+        <h2 class="time-slot">1:15 - 1:30 | Networking e Importância do Fracasso</h2>
         <ul class="list">
-            <li><strong>O que é Networking?</strong>
+            <li><strong>Networking:</strong>
                 <ul>
-                    <li>Networking é o processo de criar e manter relacionamentos profissionais para troca de informações, apoio e oportunidades de negócios.</li>
-                    <li>Desenvolver uma rede de contatos sólida pode abrir portas para parcerias, investidores e outras oportunidades essenciais para o sucesso empresarial.</li>
+                    <li>Construir uma rede de contatos sólida é crucial para o sucesso de um empreendedor. Participar de eventos, conferências e até mesmo grupos em redes sociais pode expandir sua rede de influências.</li>
                 </ul>
             </li>
-            <li><strong>Como Criar um Bom Networking:</strong>
+            <li><strong>Importância do Fracasso:</strong>
                 <ul>
-                    <li>Participar de eventos de negócios, cursos e feiras do setor e utilizar redes sociais como LinkedIn são boas maneiras de expandir seu networking.</li>
-                    <li>Manter uma postura ativa e de colaboração, buscando sempre agregar valor aos contatos, é fundamental para construir relações duradouras e benéficas.</li>
+                    <li>O fracasso é parte do processo de aprendizagem no empreendedorismo. Muitos empreendedores bem-sucedidos enfrentaram falhas antes de alcançar o sucesso.</li>
+                    <li>Fracassar oferece lições valiosas e oportunidades para melhorar o modelo de negócios e estratégias.</li>
                 </ul>
             </li>
         </ul>
     </section>
 
-    <!-- 1:40 - 2:00 | Lojas Virtuais e Startups -->
     <section class="section">
-        <h2 class="time-slot">1:40 - 2:00 | Lojas Virtuais e Startups</h2>
+        <h2 class="time-slot">1:30 - 1:45 | Modelo de Negócios e Stakeholders</h2>
         <ul class="list">
-            <li><strong>Lojas Virtuais:</strong>
+            <li><strong>Modelo de Negócios:</strong>
                 <ul>
-                    <li>As lojas virtuais são plataformas online que permitem a venda de produtos e serviços diretamente aos consumidores. Elas são uma forma eficaz de alcançar um público global e reduzir custos com infraestrutura física.</li>
-                    <li>A criação de uma loja virtual envolve o planejamento da plataforma, métodos de pagamento e estratégias de marketing digital para atrair e manter os clientes.</li>
+                    <li>O modelo de negócios descreve a forma como a empresa cria, entrega e captura valor. Ele é fundamental para direcionar as estratégias e garantir o sucesso de um empreendimento.</li>
                 </ul>
             </li>
-            <li><strong>Startups:</strong>
+            <li><strong>Stakeholders:</strong>
                 <ul>
-                    <li>Startups são empresas novas, geralmente focadas em inovação e escalabilidade, que buscam crescer rapidamente no mercado.</li>
-                    <li>Elas têm características como risco elevado, inovação disruptiva e a necessidade de obter financiamento externo para expandir suas operações.</li>
+                    <li>São todos os indivíduos ou grupos que têm interesse direto ou indireto no sucesso da empresa, como investidores, clientes, fornecedores e colaboradores.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2 class="time-slot">1:45 - 2:00 | Exercício Prático e Dúvidas</h2>
+        <ul class="list">
+            <li><strong>Exercício Prático:</strong>
+                <ul>
+                    <li>Os alunos deverão refletir sobre como as características de um empreendedor se aplicam ao seu perfil pessoal e desenvolver uma ideia de negócio, identificando stakeholders e definindo um modelo de negócios básico.</li>
+                </ul>
+            </li>
+            <li><strong>Dúvidas:</strong>
+                <ul>
+                    <li>Os alunos poderão esclarecer dúvidas sobre os conceitos discutidos durante a aula e como aplicá-los em suas ideias de negócios.</li>
                 </ul>
             </li>
         </ul>
